# Terdex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql.yml
docs/: CLI_PLAN.md  FEATURE_IDEAS.md  MAINTENANCE_STATUS.md  TECH_DEBT.md  TERMUX_GUIDE.md
scripts/: install_terdex.py  installer.sh
terdex/: __init__.py  cli.py  config.py  engine.py  ollama_support.py  planner.py  playbooks.py  providers.py  termux_reference.py
terdex/plugins/: __init__.py  confetti.py
tests/: test_cli_prompts.py  test_cli_termux.py  test_engine.py  test_plan.py
