[project]
name = "terdex"
version = "0.1.0"
description = "Lightweight, offline-friendly coding helper for Termux and local development"
authors = [{name = "Terdex Maintainers"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
ollama = [
  "ollama>=0.1.0",
]

[project.scripts]
terdex = "terdex.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
